# detersim

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRD.md  README.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  determinism_leak.md  documentation.md  experiment_proposal.md
.github/workflows/: ci.yml  full-soak.yml  nightly-soak.yml
crates/detersim-check/: Cargo.toml
crates/detersim-check/src/: lib.rs
crates/detersim-check/tests/: checker_v3_models.rs
crates/detersim-cli/: Cargo.toml
crates/detersim-cli/src/: main.rs
crates/detersim-cli/tests/: cli_artifact_workflow.rs  cli_benchmark_flow.rs  cli_e2e.rs  cli_smoke.rs
crates/detersim-core/: Cargo.toml
crates/detersim-core/src/: lib.rs  rng.rs  time.rs
crates/detersim-nemesis/: Cargo.toml
crates/detersim-nemesis/src/: lib.rs
crates/detersim-net/: Cargo.toml
crates/detersim-net/src/: lib.rs
crates/detersim-net/tests/: stream_api.rs
crates/detersim-protocols/: Cargo.toml
crates/detersim-protocols/src/: client.rs  history.rs  lib.rs  mini_raft.rs  primary_backup_kv.rs
crates/detersim-search/: Cargo.toml
crates/detersim-search/src/: lib.rs
crates/detersim-search/tests/: coverage_guided_search.rs  search_comparison.rs  suite_search_comparison.rs
crates/detersim-shrink/: Cargo.toml
crates/detersim-shrink/src/: lib.rs
crates/detersim-shrink/tests/: label_aware_shrink.rs  signature_preserving_shrink.rs
crates/detersim-sim/: Cargo.toml
crates/detersim-sim/examples/: partition_dual_leader.rs  pingpong.rs  toy_raft.rs  wal.rs
crates/detersim-sim/src/: lib.rs  scenarios.rs  tape.rs
crates/detersim-sim/tests/: determinism_meta.rs  mini_raft_recall.rs  nemesis_faults.rs  storage_faults.rs
crates/detersim-testkit/: Cargo.toml
crates/detersim-testkit/examples/: debug_failure.rs  v2_artifacts.rs  v3_artifacts.rs
crates/detersim-testkit/src/: lib.rs
crates/detersim-testkit/tests/: determinism_meta.rs  experiment_matrix.rs  experiment_suite.rs  experiment_suite_manifest.rs  partitioned_register.rs  replicated_kv.rs
crates/detersim-viz/: Cargo.toml
crates/detersim-viz/src/: lib.rs
crates/detersim-viz/tests/: artifact_schema_compat.rs  causal_artifact_v3.rs  debug_artifact.rs  debug_artifact_v3.rs
docs/: api-guide.md  artifact-causal-graph.md  benchmark-evidence-v3.md  checker-models.md  cli-workflows.md  crates-publishing.md  debugging-failures.md  design-determinism.md  getting-started.md  mini-raft-checker-backed.md  protocol-benchmarks.md  public-api-stability.md  release-checklist.md  search-benchmark-results.md  status-v1-progress.md  status-v3-plan.md  status-v3.1-plan.md  status-v3.2-plan.md  status-v3.3-plan.md  template-contract.md  tutorial-adopt-existing-sut.md  tutorial-coverage-guided-search.md  tutorial-debug-failure.md  tutorial-first-sut.md  tutorial-stream-api.md  v3-artifact-schema.md  v3-search.md  versioning.md
docs/experiments/: mini-raft.md  replicated-kv.md
scripts/: lint_determinism.sh
