[package]
name = "detersim-check"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Invariant hooks and small-history linearizability checking for detersim."

[dependencies]
detersim-core = { path = "../detersim-core" }
