[package]
name = "detersim-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Local command-line helpers for running DeterSim suites and artifacts."

[dependencies]
detersim-core = { path = "../detersim-core" }
detersim-net = { path = "../detersim-net" }
detersim-search = { path = "../detersim-search" }
detersim-shrink = { path = "../detersim-shrink" }
detersim-sim = { path = "../detersim-sim" }
detersim-testkit = { path = "../detersim-testkit" }
detersim-viz = { path = "../detersim-viz" }
