[package]
name = "detersim-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Local command-line helpers for running DeterSim suites and artifacts."

[dependencies]
detersim-check = { path = "../detersim-check", version = "0.1.0" }
detersim-core = { path = "../detersim-core", version = "0.1.0" }
detersim-net = { path = "../detersim-net", version = "0.1.0" }
detersim-nemesis = { path = "../detersim-nemesis", version = "0.1.0" }
detersim-protocols = { path = "../detersim-protocols", version = "0.1.0" }
detersim-search = { path = "../detersim-search", version = "0.1.0" }
detersim-shrink = { path = "../detersim-shrink", version = "0.1.0" }
detersim-sim = { path = "../detersim-sim", version = "0.1.0" }
detersim-testkit = { path = "../detersim-testkit", version = "0.1.0" }
detersim-viz = { path = "../detersim-viz", version = "0.1.0" }
