[package]
name = "detersim-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Core capability traits (Env/Clock/Rng/Network/Storage) for the detersim DST framework."

[dependencies]
# Intentionally zero dependencies. See AGENTS.md: nothing that spawns threads or reads OS entropy may enter `core`.
