[package]
name = "detersim-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic stream and socket-style protocol helpers for DeterSim."
readme = "../../README.md"

[dependencies]
detersim-core = { path = "../detersim-core", version = "0.1.0" }
