[package]
name = "detersim-protocols"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Reference protocol SUTs used by DeterSim recall experiments."

[dependencies]
detersim-check = { path = "../detersim-check", version = "0.1.0" }
detersim-core = { path = "../detersim-core", version = "0.1.0" }
