[package]
name = "detersim-search"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Coverage and signal guided seed search for DeterSim experiments."
readme = "../../README.md"

[dependencies]
detersim-sim = { path = "../detersim-sim" }
detersim-testkit = { path = "../detersim-testkit" }

[dev-dependencies]
detersim-core = { path = "../detersim-core" }
detersim-shrink = { path = "../detersim-shrink" }
