[package]
name = "detersim-search"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Coverage and signal guided seed search for DeterSim experiments."
readme = "../../README.md"

[dependencies]
detersim-sim = { path = "../detersim-sim", version = "0.1.0" }
detersim-testkit = { path = "../detersim-testkit", version = "0.1.0" }

[dev-dependencies]
detersim-core = { path = "../detersim-core", version = "0.1.0" }
detersim-shrink = { path = "../detersim-shrink", version = "0.1.0" }
