[package]
name = "detersim-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Deterministic single-threaded executor, simulated network/storage, and entropy tape for detersim."

[dependencies]
detersim-core = { path = "../detersim-core" }
detersim-nemesis = { path = "../detersim-nemesis" }
# Intentionally zero third-party dependencies in the simulation core.

[dev-dependencies]
detersim-protocols = { path = "../detersim-protocols" }
