[package]
name = "detersim-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Deterministic single-threaded executor, simulated network/storage, and entropy tape for detersim."

[dependencies]
detersim-core = { path = "../detersim-core", version = "0.1.0" }
detersim-nemesis = { path = "../detersim-nemesis", version = "0.1.0" }
# Intentionally zero third-party dependencies in the simulation core.

[dev-dependencies]
detersim-check = { path = "../detersim-check", version = "0.1.0" }
detersim-protocols = { path = "../detersim-protocols", version = "0.1.0" }
