[package]
name = "detersim-testkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Reusable deterministic test harness helpers for detersim users."

[dependencies]
detersim-check = { path = "../detersim-check" }
detersim-core = { path = "../detersim-core" }
detersim-net = { path = "../detersim-net" }
detersim-nemesis = { path = "../detersim-nemesis" }
detersim-protocols = { path = "../detersim-protocols" }
detersim-shrink = { path = "../detersim-shrink" }
detersim-sim = { path = "../detersim-sim" }
detersim-viz = { path = "../detersim-viz" }
